fix : resposive login page

--- a/client/app/components/Inputs/email/email-input.styles.css
+++ b/client/app/components/Inputs/email/email-input.styles.css
@@ -6,7 +6,7 @@
 .focus-blue-bottom-border:focus {
     border-color: #DCE1E7;
     background-color: rgba(243, 243, 243, 0.721);
-    border-bottom-color: #007bff;
+    border-bottom-color: #088FC4;
     outline: none;
 }
 
