--- a/client/app/components/Inputs/password/password-input.styles.css
+++ b/client/app/components/Inputs/password/password-input.styles.css
@@ -6,7 +6,7 @@
 .focus-blue-bottom-border:focus {
     border-color: #DCE1E7;
     background-color: rgba(243, 243, 243, 0.721);
-    border-bottom-color: #007bff;
+    border-bottom-color: #088FC4;
     outline: none;
     transition: all 500ms   ;
 }
@@ -15,15 +15,14 @@
     box-shadow: none;
 }
 
-#show-hide-password{
+.show-hide-password{
     color: #3D3D3D;
     background-color: transparent;
-    
 }
 
 
 
-#show-hide-password:hover{
-    background-color: rgba(200, 200, 200, 0.448);
+.show-hide-password:hover{
+    background-color:rgb(204, 229, 235) ;
     color: black;
 }
