--- a/client/app/styles/globals/variables.scss
+++ b/client/app/styles/globals/variables.scss
@@ -15,7 +15,7 @@ $z-index-999 : 999;
 
 $primary-color : #088FC4;
 
-.bg-primary-color{
+.btn-primary-custom{
 background-color:rgba($color: $primary-color, $alpha: .85);
 }
 
